Updated applicant dashboard

--- a/src/app/modules/applicant-module/applicant-module.component.html
+++ b/src/app/modules/applicant-module/applicant-module.component.html
@@ -47,3 +47,6 @@
   </div>
   <router-outlet></router-outlet>
 </ngx-customizable-column-layout>
+<!-- <ngx-single-column-layout>
+  <router-outlet></router-outlet>
+</ngx-single-column-layout> -->
