--- a/src/app/modules/career-succession/competency/competency.component.html
+++ b/src/app/modules/career-succession/competency/competency.component.html
@@ -119,7 +119,7 @@
           <div class="form-group row ">
             <label for="Descripion" >Descripion</label>
               <!-- <ngx-wysisyg-input style="padding-left: -10px;"  [(value)]="competencyData.description" ></ngx-wysisyg-input>                  </div> -->
-              <textarea name="description" #description="ngModel" [(ngModel)]="competencyData.description" cols="30" rows="10"></textarea>
+              <textarea name="description" #description="ngModel" [(ngModel)]="competencyData.description" cols="30" rows="10" style="width: 100%;"></textarea>
           </div>
 
           <div class="form-group row ">
