--- a/src/app/modules/career-succession/new-competency/new-competency.component.html
+++ b/src/app/modules/career-succession/new-competency/new-competency.component.html
@@ -66,7 +66,7 @@
                   <label for="Descripion" class="col-sm-3 col-form-label mylabel">Descripion</label>
                   <div class="col-sm-8 col-md- 8 col-lg-8">
                     <!-- <ngx-wysisyg-input style="padding-left: -10px;"  [(value)]="myCompetency.description" ></ngx-wysisyg-input>                  </div> -->
-                    <textarea name="description" #description="ngModel" [(ngModel)]="myCompetency.description" cols="30" rows="10"></textarea>
+                    <textarea name="description" #description="ngModel" [(ngModel)]="myCompetency.description" cols="30" rows="10" style="width: 100%;"></textarea>
                   </div>
                 </div>
 
