--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -29,7 +29,7 @@
         <div class="form-group row mydiv">
           <label for="Description" class="col-sm-3 col-form-label mylabel">Description</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <textarea name="description" #description="ngModel" cols="30" rows="10" [(ngModel)]="poolModel.description"></textarea>
+              <textarea name="description" #description="ngModel" cols="30" rows="10" [(ngModel)]="poolModel.description" style="width: 100%;"></textarea>
           </div>
         </div>
 
