--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -155,7 +155,7 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <textarea name="customAnswer" #customAnswer="ngModel" [(ngModel)]="loanModel.customAnswer" cols="40" rows="10"></textarea>
+                    <textarea name="customAnswer" #customAnswer="ngModel" [(ngModel)]="loanModel.customAnswer" cols="30" rows="10" style="width: 100%;"></textarea>
                   </div>
 
                 </div>
@@ -166,7 +166,7 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <textarea name="justification" #justification="ngModel" [(ngModel)]="loanModel.justification" cols="40" rows="10"></textarea>
+                    <textarea name="justification" #justification="ngModel" [(ngModel)]="loanModel.justification" cols="40" rows="10" style="width: 100%;"></textarea>
                   </div>
                 </div>
 
