--- a/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
+++ b/src/app/modules/recruitment/applicants-dashboard/applicants-dashboard.component.html
@@ -162,7 +162,7 @@
             <div class="job-descrition"><p>{{ job.description }}</p>
             </div>
             <div>
-              <button class="btn" routerLink="[/jobdetails]" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
+              <button class="btn" routerLink="[/jobdetails + job.id]" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
             </div>
           </div>
 
