--- a/src/app/modules/recruitment/interviewerdashboard/applicantselection/applicantselection.component.html
+++ b/src/app/modules/recruitment/interviewerdashboard/applicantselection/applicantselection.component.html
@@ -3,7 +3,7 @@
   <nb-tab tabTitle="Roles">
     <ngx-tableheader></ngx-tableheader>
     <div class="row">
-      <div class="col-xxxl-4 col-md-4">
+      <div *ngFor="let role of allJobRoles" class="col-xxxl-4 col-md-4">
         <nb-card>
           <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
              <div style="display: flex; flex-direction: column;">
@@ -28,105 +28,7 @@
                 </div>
 
               </div>
-              <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
-              </div>
-           </div>
-         </nb-card>
-      </div>
-
-      <div class="col-xxxl-4 col-md-4">
-        <nb-card>
-          <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
-             <div style="display: flex; flex-direction: column;">
-               <div style="display: flex; flex-direction: column;">
-                 <span style="font-size: 16px; font-weight: 700; color: #080730 !important;">Technical Support</span>
-                 <span class="smalltext" style="color: #6C757D;">127 Applicants</span>
-               </div>
-
-             </div>
-             <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
-             </div>
-          </div>
-        </nb-card>
-     </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xxxl-4 col-md-4">
-        <nb-card>
-          <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
-             <div style="display: flex; flex-direction: column;">
-               <div style="display: flex; flex-direction: column;">
-                 <span style="font-size: 16px; font-weight: 700; color: #080730 !important;">Technical Support</span>
-                 <span class="smalltext" style="color: #6C757D;">127 Applicants</span>
-               </div>
-
-             </div>
-             <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
-             </div>
-          </div>
-        </nb-card>
-     </div>
-      <div class="col-xxxl-4 col-md-4">
-         <nb-card>
-           <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
-              <div style="display: flex; flex-direction: column;">
-                <div style="display: flex; flex-direction: column;">
-                  <span style="font-size: 16px; font-weight: 700; color: #080730 !important;">Technical Support</span>
-                  <span class="smalltext" style="color: #6C757D;">127 Applicants</span>
-                </div>
-
-              </div>
-              <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
-              </div>
-           </div>
-         </nb-card>
-      </div>
-
-      <div class="col-xxxl-4 col-md-4">
-        <nb-card>
-          <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
-             <div style="display: flex; flex-direction: column;">
-               <div style="display: flex; flex-direction: column;">
-                 <span style="font-size: 16px; font-weight: 700; color: #080730 !important;">Technical Support</span>
-                 <span class="smalltext" style="color: #6C757D;">127 Applicants</span>
-               </div>
-
-             </div>
-             <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
-             </div>
-          </div>
-        </nb-card>
-     </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xxxl-4 col-md-4">
-        <nb-card>
-          <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
-             <div style="display: flex; flex-direction: column;">
-               <div style="display: flex; flex-direction: column;">
-                 <span style="font-size: 16px; font-weight: 700; color: #080730 !important;">Technical Support</span>
-                 <span class="smalltext" style="color: #6C757D;">127 Applicants</span>
-               </div>
-
-             </div>
-             <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
-             </div>
-          </div>
-        </nb-card>
-     </div>
-      <div class="col-xxxl-4 col-md-4">
-         <nb-card>
-           <div style="display: flex; justify-content: space-between; align-content: center; padding: 20px;">
-              <div style="display: flex; flex-direction: column;">
-                <div style="display: flex; flex-direction: column;">
-                  <span style="font-size: 16px; font-weight: 700; color: #080730 !important;">Technical Support</span>
-                  <span class="smalltext" style="color: #6C757D;">127 Applicants</span>
-                </div>
-
-              </div>
-              <div style="padding: 20px;"><span style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</span>
+              <div style="padding: 20px;"><button style="background: rgba(72, 71, 224, 0.08); padding: 7px; margin-top: 10px; color: #4847E0;">View</button>
               </div>
            </div>
          </nb-card>
