--- a/src/app/modules/recruitment/job-details/job-details.component.html
+++ b/src/app/modules/recruitment/job-details/job-details.component.html
@@ -63,15 +63,15 @@
 <span class="sub-title" style="padding: 20px 0px;">Apply Now</span>
 <form style="font-family: Rubik;">
   <div class="form-group row mydiv">
-    <label for="vendorName" class="col-sm-4 col-form-label mylabel">Vendor Name</label>
+    <label for="firstName" class="col-sm-4 col-form-label mylabel">First Name</label>
     <div class="col-sm-6 col-lg-6">
-      <input type="text" class="form-control" id="vendorName" placeholder="Vendor Name">
+      <input type="text" class="form-control" name="firstName" placeholder="First Name">
     </div>
   </div>
   <div class="form-group row mydiv">
-    <label for="contactPerson" class="col-sm-4 col-form-label mylabel">Primary Contact Person</label>
+    <label for="contactPerson" class="col-sm-4 col-form-label mylabel">Last Name</label>
     <div class="col-sm-6 col-lg-6">
-      <input type="text" class="form-control" id="contactPerson" placeholder="Primary Contact Person">
+      <input type="text" class="form-control" name="Last Name" placeholder="Last Name">
     </div>
   </div>
 
@@ -93,18 +93,6 @@
     <label for="website" class="col-sm-4 col-form-label mylabel">Website</label>
     <div class="col-sm-6 col-lg-6">
       <input type="url" class="form-control" id="website" placeholder="Website">
-    </div>
-  </div>
-
-  <div class="form-group row mydiv">
-    <label for="specialization" class="col-sm-4 col-form-label mylabel">Specialization</label>
-    <div class="col-sm-6 col-lg-6">
-        <select class="custom-select" required>
-          <option value="">Select </option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
     </div>
   </div>
 
