--- a/src/app/modules/recruitment/admin-dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
       </span>
       </div>
       <div style="padding:5px">
-        <span class="header5-bold">567</span>
+        <span class="header5-bold">{{ applicationsCounter }}</span>
       </div>
      </div>
      </div>
