--- a/src/app/modules/recruitment/applicant-profile/applicant-profile.component.html
+++ b/src/app/modules/recruitment/applicant-profile/applicant-profile.component.html
@@ -7,7 +7,7 @@
       <nb-card-header>
         <div style="display: flex;flex-direction: row;justify-self: center;">
           <div style="flex: auto;"><span style="text-transform: uppercase;">Personal Information</span></div>
-          <div><a href="">Edit Profile</a></div>
+          <div><a href="javascript:void(0)" (click)="updateMyProfile()">Edit Profile</a></div>
         </div>
       </nb-card-header>
       <div class="row">
@@ -84,7 +84,7 @@
                   <p style="color: #4847E0 !important; text-transform: uppercase;" class="listsubheader">Work Experience
                   </p>
                 </div>
-                <button outline='true' nbButton status="primary" style="min-width: unset !important;">
+                <button outline='true' nbButton status="primary" (click)="addNewWork()" style="min-width: unset !important;">
                   <nb-icon icon="plus"></nb-icon>&nbsp;Add
                 </button>
               </div>
@@ -337,7 +337,7 @@
         <div class="row">
           <div class="col-md-12 col-xxl-12">
             <nb-card>
-              <nb-card-body>
+              <nb-card-body *ngIf="isApplicant">
                 <div>
                   <div
                     style="border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 10px; display: flex;flex-direction: row;">
@@ -354,6 +354,40 @@
                   <div style="flex: auto; color: #080730;"><span>Time Management</span></div>
                   <div style="flex: auto; color: #080730;"><span>Complete Candor</span></div>
                   <div style="flex: auto; color: #080730;"><span>Good communication skills.</span></div>
+                </div>
+              </nb-card-body>
+
+              <nb-card-body *ngIf="isInterviewer" style="background-color: transparent;">
+                <div class="form-group row" style="display: flex; justify-content: center; align-self:center; align-items: center;">
+                    <button fullWidth nbButton status="primary">Open Scorecard</button>
+                </div>
+              </nb-card-body>
+
+              <nb-card-body *ngIf="isAdmin">
+                <div class="form-group row">
+                  <div class="col" style="display: flex; justify-content: space-between; align-items: center;">
+                    <button nbButton style="color: #4847E0"><nb-icon icon="calendar"></nb-icon> Schedule</button>
+                    <button nbButton style="color: #4847E0"><nb-icon icon="email"></nb-icon> Email</button>
+                    <button nbButton style="color: #4847E0"><nb-icon icon="share"> </nb-icon>Share</button>
+                  </div>
+                </div>
+
+                <div class="form-group row">
+                  <div class="col">
+                    <label for="">Recruitment Action</label>
+                    <select name="recAction" id="" class="custom-select">
+                      <option value=""></option>
+                      <option *ngFor="let action of recruitmentAction" [value]="action.id">{{action.label}}</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="form-group row">
+                  <div class="col">
+                    <button nbButton status="primary">Assign</button>
+                    <span style="padding: 8px;"></span>
+                    <button nbButton>Close</button>
+                  </div>
                 </div>
               </nb-card-body>
             </nb-card>
@@ -430,5 +464,187 @@
 
     </div>
 
-
   </div>
+
+  <ngx-side-modal [(show)]="newWork" style="margin-top: -75px;">
+    <div modal-header>Add Work Experience</div>
+    <div modal-body>
+      <form>
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Job Title</label>
+            <input type="text" class="form-control" id="jobTitle" placeholder="Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Company</label>
+            <input type="text" class="form-control" name="company" style="width: 100%;">
+          </div>
+        </div>
+  
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Body" class="col-form-label mylabel">Responsibilities</label><br>
+            <textarea name="responsibilities" id="" cols="30" rows="10" style="width: 100%;"></textarea>
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Body" class="col-form-label mylabel">Duration</label>
+            <ngx-date-range required></ngx-date-range>
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <nb-checkbox status="basic">I currently work here</nb-checkbox>
+          </div>
+        </div>
+  
+          <div class="form-group row">
+            <div class="col">
+              <button nbButton status="primary">Save Now</button>
+              <span style="padding: 8px;"></span>
+              <button nbButton>Cancel</button>
+            </div>
+          </div>
+        </form>
+          </div>
+
+  </ngx-side-modal>
+
+
+  <ngx-side-modal [(show)]="updateProfile" style="margin-top: -75px;">
+    <div modal-header>Personal Information</div>
+    <div modal-body>
+      <form>
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">First Name</label>
+            <input type="text" class="form-control" name="firstName" #firstName="ngModel" [(ngModel)]="profileData.firstName" placeholder="First Name">
+          
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Last Name</label>
+            <input type="text" class="form-control" name="lastName" #lastName="ngModel" [(ngModel)]="profileData.lastName" placeholder="Last Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Phone</label>
+            <input type="tel" class="form-control" name="phone" #phone="ngModel" [(ngModel)]="profileData.mobile" placeholder="Last Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Email</label>
+            <input type="email" class="form-control" name="email" #email="ngModel" [(ngModel)]="profileData.email" placeholder="Last Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Website</label>
+            <input type="url" class="form-control" name="webs" #email="ngModel" [(ngModel)]="profileData.email" placeholder="Last Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Address</label>
+            <textarea name="address" id="" cols="30" rows="10" style="width: 100%;"></textarea>
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">LinkedIn</label>
+            <input type="tel" class="form-control" name="firstName" placeholder="Last Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Instagram</label>
+            <input type="tel" class="form-control" name="firstName" placeholder="Last Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Twitter</label>
+            <input type="tel" class="form-control" name="firstName" placeholder="Last Name">
+          </div>
+        </div>
+
+          <div class="form-group row">
+            <div class="col">
+              <button nbButton status="primary">Save</button>
+              <span style="padding: 8px;"></span>
+              <button nbButton>Cancel</button>
+            </div>
+          </div>
+        </form>
+          </div>
+
+  </ngx-side-modal>
+  
+
+  <ngx-side-modal [(show)]="addEducation" style="margin-top: -75px;">
+    <div modal-header>Add References</div>
+    <div modal-body>
+      <form>
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Full Name</label>
+            <input type="text" class="form-control" name="fullName" placeholder="Full Name">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Profession</label>
+            <input type="text" class="form-control" name="profession" placeholder="Profession">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Place of Work</label>
+            <input type="text" class="form-control" name="workPlace" placeholder="Place of Work">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Phone</label>
+            <input type="tel" class="form-control" name="phone" placeholder="Phone">
+          </div>
+        </div>
+
+        <div class="form-group row mydiv">
+          <div class="col">
+            <label for="Name" class="col-form-label mylabel">Email</label>
+            <input type="email" class="form-control" name="email" placeholder="Email">
+          </div>
+        </div>
+
+          <div class="form-group row">
+            <div class="col">
+              <button nbButton status="primary">Save</button>
+              <span style="padding: 8px;"></span>
+              <button nbButton>Cancel</button>
+            </div>
+          </div>
+        </form>
+          </div>
+
+  </ngx-side-modal>
